# k4-project-template

./: .pre-commit-config.yaml  CMakeLists.txt  README.md
.github/workflows/: key4hep-build.yaml  pre-commit.yaml
k4ProjectTemplate/: CMakeLists.txt
k4ProjectTemplate/options/: checkcollection.py  createExampleEventData.py  createHelloWorld.py  eventcounter.py  new_example.py  readExampleEventData.py
k4ProjectTemplate/src/components/: CreateExampleEventData.cpp  CreateExampleEventData.h  EmptyAlg.cpp  EmptyAlg.h  ExampleConsumer.cpp  ExampleTransformer.cpp  HelloWorldAlg.cpp  HelloWorldAlg.h
